--- a/Module 6/accountQuickCreate.html
+++ b/Module 6/accountQuickCreate.html
@@ -1,11 +1,15 @@
 <template>
     <lightning-card title="Account Quick Create" icon-name="standard:account">
-        <lightning-button class="slds-m-top_small" onclick={showAccount} label="Show Account Fields" slot="actions">
+        <lightning-button class="slds-m-top_small" onclick={showOpprtunities} label="Show Account Fields" slot="actions">
         </lightning-button>
         <lightning-record-edit-form object-api-name="Account" onsuccess={handleSuccess}>
             <lightning-input-field field-name="Name">
             </lightning-input-field>
             <template if:true={showAccounts}>
+                <lightning-input-field field-name='Phone'>
+                </lightning-input-field>
+                <lightning-input-field field-name='BillingAddress'>
+                </lightning-input-field>
                 <lightning-input-field field-name='AccountNumber'>
                 </lightning-input-field>
                 <lightning-input-field field-name='Industry'>
@@ -18,13 +22,9 @@
                 </lightning-input-field>
                 <lightning-input-field field-name='AnnualRevenue'>
                 </lightning-input-field>
-                <lightning-input-field field-name='BillingAddress'>
-                </lightning-input-field>
                 <lightning-input-field field-name='CleanStatus'>
                 </lightning-input-field>
                 <lightning-input-field field-name='CustomerPriority__c'>
-                </lightning-input-field>
-                <lightning-input-field field-name='Phone'>
                 </lightning-input-field>
             </template>
             <lightning-button-group class="slds-align_absolute-center">
