--- a/Module 6/opportunityQuickCreate.html
+++ b/Module 6/opportunityQuickCreate.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="Opportunity Quick Create" icon-name="standard:opportunity">
         <lightning-button class="slds-m-top_small" onclick={showOpprtunities}
-            label="Show All Opportunity Fields" slot="actions">
+            label="Show Opportunity Fields" slot="actions">
         </lightning-button>
         <lightning-record-edit-form object-api-name="Opportunity" onsuccess={handleSuccess}>
             <div class="slds-grid slds-gutters">
