--- a/Module 10/contactQuickCreate.html
+++ b/Module 10/contactQuickCreate.html
@@ -14,6 +14,15 @@
                     </lightning-input-field>
                 </div>
             </div>
+            <template if:true={LeadSourcePicklistValues.data}>
+                <lightning-combobox name="progress"
+                                    label="Lead Source"
+                                    value={value}
+                                    placeholder="-Select-"
+                                    options={LeadSourcePicklistValues.data.values}
+                                    onchange={handleChange} >
+                </lightning-combobox>
+            </template>
             <template if:true={showContact}>
                 <lightning-input-field field-name='Email'>
                 </lightning-input-field>
