--- a/Module 10/contactQuickCreate.html
+++ b/Module 10/contactQuickCreate.html
@@ -49,7 +49,7 @@
                 </lightning-button>
                 <lightning-button
             name="new-with-defaults"
-            label="New Account Record"
+            label="New Contact Record"
             class="slds-p-top_small"
             variant="brand"
             onclick={navigateToNewRecordPage}
